@@ -5,9 +5,10 @@
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.95.8 (xxxxxx):
+Coccinella-0.95.8 (050622):
 
 	- reworked the registration process
+	- animated emoticons
 
 Coccinella-0.95.7 (050429):
 
